# GUI-template

./: .gitmodules  CMakeLists.txt  main.cpp
.cache/clangd/index/: colors.cpp.D6105C94FFFFA3D9.idx  colors.hpp.8B818F451225BBDD.idx  format.cpp.BCA093BEBDBA8FB0.idx  format.hpp.F0BC592FFAF24B07.idx  gui.cpp.8667217FDC9319A4.idx  gui.hpp.5C50547902C957DC.idx  imconfig.h.10119709390427B9.idx  imgui.cpp.6BB6F6BA2E15016A.idx  imgui.h.A2DDA04C5BD49435.idx  imgui_draw.cpp.16973C6ED1439EE5.idx  imgui_freetype.cpp.609AEFF9D43A8D70.idx  imgui_freetype.h.761EFA0A1E7FEFDE.idx  imgui_impl_opengl3.cpp.E00568753027ED77.idx  imgui_impl_opengl3.h.F916F92CF11464EC.idx  imgui_impl_opengl3_loader.h.9B0583C835EFD4A7.idx  imgui_impl_sdl2.cpp.2DC854FC0EBAABE5.idx  imgui_impl_sdl2.h.A4A93F636AF5B15F.idx  imgui_internal.h.2F28937D95A852AD.idx  imgui_tables.cpp.53B7941880B46717.idx  imgui_widgets.cpp.C8C5F524C502B4F6.idx  imstb_rectpack.h.C58C0A9019AE9AC2.idx  imstb_textedit.h.A85EF1B93AFF894B.idx  imstb_truetype.h.DC7D7AA74FD1D3EF.idx  logging.cpp.F23EF0665AB6B171.idx  logging.hpp.6FE989465ECD12C2.idx  main.cpp.698AF7F4F3A36074.idx  output.hpp.4E008F4F8AA847AC.idx  platform.cpp.7D2329A9A2BD80A9.idx  platform.hpp.3C5A9C375463AC5E.idx  symbols.hpp.57CEAB9B436A5FE1.idx  window.cpp.B6F98DC273999365.idx
imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
imgui/backends/: imgui_impl_sdl2.cpp
imgui/misc/fonts/: binary_to_compressed_c.cpp
imgui/misc/freetype/: imgui_freetype.cpp
include/: colors.hpp  format.hpp  gui.hpp  logging.hpp  output.hpp  platform.hpp  symbols.hpp
src/: CMakeLists.txt  colors.cpp  format.cpp  gui.cpp  logging.cpp  platform.cpp  window.cpp
